<resources>
    <string name="app_name">Authentium</string>
    <string name="edit_text_hint_font">Roboto-Italic_0.ttf</string>
    <string name="frag_menu_my_profile">Account</string>
    <string name="frag_menu_logout">Logout</string>
    <string name="enter_email_fp">Enter your login email address</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password_error">Password and confirm password do not match</string>
    <string name="no_internet">Internet connection not available</string>
    <string name="login">LOGIN</string>
    <string name="submit">SUBMIT</string>
    <string name="hint_password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="hint_emial">Email Address</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="server_error">Something went wrong. Please try again.</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Re-enter Password</string>
    <string name="old_password">Old Password</string>
    <string name="frag_profile_change_password">Submit</string>
    <string name="hint_phone_number"><![CDATA[Phone Number<font color=\'#cc0029\'>*</font>]]></string>
    <string name="hint_suburb"><![CDATA[Suburb<font color=\'#cc0029\'>*</font>]]></string>
    <string name="hint_txt_post_code"><![CDATA[Post Code<font color=\'#cc0029\'>*</font>]]></string>
    <string name="hint_emial_register"><![CDATA[Email Address<font color=\'#cc0029\'>*</font>]]></string>
    <string name="hint_password_register"><![CDATA[Password<font color=\'#cc0029\'>*</font>]]></string>
    <string name="streetadress">Street Address</string>
    <string name="hint_streetadress"><![CDATA[Street Address<font color=\'#cc0029\'>*</font>]]></string>
    <string name="hint_suburb_for_delivery">Suburb</string>
    <string name="alert_valid_email">Please enter valid email address</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="register"><![CDATA[<font color=#c1c1c1>Don\'t have an account?</font> <font color=#2278d4>Sign up</font>]]></string>
    <string name="phone_number">Phone Number</string>
    <string name="validate_email">Please enter email address</string>
    <string name="validate_businessname">Please enter business name</string>
    <string name="validate_contact_name">Please enter full name</string>
    <string name="validate_password_min_char">Please enter valid password</string>
    <string name="validate_phone">Please enter phone number</string>
    <string name="validate_password">Please enter password</string>
    <string name="validate_confirm_password">Password and Re-enter Password does not match</string>
    <string name="registered_successfully">Thank You, \n Your registration has been successfully submitted. \n \n One of our sales representative will be in contact with you shortly</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="frag_menu_order">Browse</string>
    <string name="frag_menu_fav_list">Favourites </string>
    <string name="frag_menu_history">My Orders</string>
    <string name="frag_menu_invoices">Invoices</string>
    <string name="lebelWelcome">Welcome </string>
    <string name="status">Status : </string>
    <string name="enquiries">Enquiries : </string>
    <string name="lebel_message">Notifications</string>
    <string name="lebel_important_message">Important Note</string>
    <string name="btn_countinue">CONTINUE</string>
    <string name="count_down_timer">Order cut-off time</string>
    <string name="lebel_date_picker_message">Please select your delivery or pick up date from the calendar below:</string>
    <string name="call">CALL</string>
    <string name="search_title">Search</string>
    <string name="available">  Available</string>
    <string name="frag_product_title">Pantry</string>
    <string name="choose_date">Please choose your preferred \n pick up or delivery date.</string>
    <string name="hint_contact_name_for_delivery">First and Last Name</string>
    <string name="hint_contact_name"><![CDATA[First and Last Name<font color=\'#cc0029\'>*</font>]]></string>
    <string name="hint_buisness_name"><![CDATA[Business Name<font color=\'#cc0029\'>*</font>]]></string>
    <string name="title_category">Categories</string>
    <string name="swiperight">ADD TO FAVOURITE LIST</string>
    <string name="swipeleft">ADD TO CART</string>
    <string name="frag_profile_title">Profile</string>
    <string name="frag_menu_product_search">Product Search</string>
    <string name="name">Please enter name for pantry list</string>
    <string name="ok">OK</string>
    <string name="fav_list_lebel">Choose Favourite List</string>
    <string name="add_product_button">Add Product</string>
    <string name="select_fav_list">Please select favourite list</string>
    <string name="no_product">No product in selected pantry list</string>
    <string name="error">Oops!!</string>
    <string name="added_successfully">Product added successfully</string>
    <string name="add_fav">ADD FAVOURITE LIST</string>
    <string name="frag_fav_title">My Favourite List</string>
    <string name="add_enquiry">Item Enquiry</string>
    <string name="hint_info">Enter Item Enquiry</string>
    <string name="txt_copy_pantry_list">Please enter new name for copied pantry list</string>
    <string name="add_fav_list">Add Favourite List</string>
    <string name="hint_no_fav_list">No favourite list available</string>
    <string name="hint_no_notify_list">No new notifications</string>
    <string name="txt_description">DESCRIPTION</string>
    <string name="txt_price">PRICE</string>
    <string name="txt_uom">UOM</string>
    <string name="txt_qty">QTY</string>
    <string name="txt_qty_total">TOTAL</string>
    <string name="txt_select">SELECT</string>
    <string name="txt_add_comment">Add Comment</string>
    <string name="title_add_new_comment">Add New Comment</string>
    <string name="title_add_new">Add New</string>
    <string name="hint_add_comment">Choose Comment</string>
    <string name="btn_add_item">CONTINUE</string>
    <string name="btn_place_order">PLACE ORDER</string>
    <string name="request_for_invoices_title">Request For Invoices</string>
    <string name="et_email_id">Email Id:</string>
    <string name="et_from">From:</string>
    <string name="et_to">To:</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_get_invoices">Get Invoices</string>
    <string name="txt_order_date">ORDER DATE</string>
    <string name="txt_number">NUMBER</string>
    <string name="txt_status">STATUS</string>
    <string name="hint_comment">Enter Comment</string>
    <string name="comment_added_sucessfully">Comment Added Successfully</string>
    <string name="comment_deleted_successfully">Comment Deleted Successfully</string>
    <string name="favorite_list_deleted_successfully">Favorite List Deleted Successfully</string>
    <string name="header_my_cart_title">My Cart</string>
    <string name="txt_weekly_item">Item history</string>
    <string name="txt_no_data">No  product in Cart</string>
    <string name="delete_product">Delete Product</string>
    <string name="order_history_title">Order History</string>
    <string name="txt_order_number">Enter PO Number</string>
    <string name="skip">SKIP</string>
    <string name="txt_btn_save">SAVE ORDER</string>
    <string name="header_invoices">Invoices</string>
    <string name="header_order_detail">Order Detail</string>
    <string name="reorder">Re-Order</string>
    <string name="enter_email_id">Enter Email id</string>
    <string name="enter_from">Enter From Date</string>
    <string name="enter_to">Enter To Date</string>
    <string name="et_enter_number">Enter PO Number</string>
    <string name="title_shipping_address">Shipping Addresses</string>
    <string name="select_address">Please Select Address</string>
    <string name="charges_msg">Order under $150, freight charges $ 50 will be applicable. Do you want to continue?</string>
    <string name="title_message">Message</string>
    <string name="title_walkthrough">WholeSale B2B</string>
    <string name="title_industries">Industries We Serve</string>
    <string name="title_beverages">Beverages</string>
    <string name="tittle_sea_food">Seafood</string>
    <string name="tittle_meat">Meat</string>
    <string name="tittle_dry_good">Dry Goods</string>
    <string name="tittle_coffee">Coffee</string>
    <string name="tittle_produce">Produce</string>
    <string name="tittle_packaging">Packaging</string>
    <string name="tittle_gifts">Gifts</string>
    <string name="tittle_poultry">Poultry</string>
    <string name="tittle_product">Product</string>
    <string name="txt_add_quantity">Add Quantity</string>
    <string name="no_message">No Notification</string>
    <string name="error_comment_empty">Please enter comment</string>
    <string name="validate_phone_min_char">Invalid mobile number. Please ensure it is exactly 10 numbers and it should start with a 0.</string>
    <string name="capy_pantry_title">Copy Pantry</string>
    <string name="save_pantry_title">Save Pantry</string>
    <string name="cart_title">Cart</string>
    <string name="options_title">Latest Specials</string>
    <string name="minus">-</string>
    <string name="from_date">From Date should be less than To Date</string>
    <string name="no_fav_product">No product in selected favourite list</string>
    <string name="ask_call_permission">Permission required to call.</string>
    <string name="quantity_validation">Quantity should be between 0.01 to 99999.99</string>
    <string name="copy_pantry">Pantry list copied successfully </string>
    <string name="created_pantry">Pantry list created successfully</string>
    <string name="created_fav">Favourite list created successfully</string>
    <string name="copy_fav">Favourite list copied successfully </string>
    <string name="pantry_exist">Pantry name already exists for this customer</string>
    <string name="fav_exist">Favourite name already exists for this customer</string>
    <string name="specials">Latest Specials</string>
    <string name="walk_though_description">Lorem ipsum dolor sit amet consecr adipiscing elit, sed do eiusmod</string>
    <string name="no_comment_message">No comments available</string>
    <string name="txt_no_product">No Product Found</string>
    <string name="txt_terms">TERMS</string>
    <string name="txt_privacy">PRIVACY</string>
    <string name="txt_terms_condition">Terms &amp; Conditions</string>
    <string name="txt_privacy_policy">Privacy Policy</string>
    <string name="tittle_frieght_charges">Frieght Charges</string>
    <string name="txt_amend_saved_order">Amend saved order</string>
    <string name="txt_delete_saved_order">Delete saved order</string>
    <string name="title_saved_msg">You have a saved order, do you want to amend saved order or delete saved order?</string>
    <string name="heading_delivery_date">Delivery Date</string>
    <string name="heading_delivery_status">Delivery Status</string>
    <string name="order_item">Order in items</string>
    <string name="message">Please note these following product(s) are ORDER IN items and we will try to deliver ASAP:</string>
    <string name="order_place">Continue to place order ? </string>
    <string name="backorder_stock_not_available">Your order quantity is greater than the stock on hand quantity of</string>
    <string name="lebel_important">Important</string>
    <string name="barcode">Barcode </string>
    <string name="zero">$0</string>
    <string name="terms">Terms</string>
    <string name="days_overdue">Days overdue:</string>
    <string name="total_owing">Total Amount Owing</string>
</resources>