<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingTop="@dimen/margin_twnety"
    android:paddingBottom="@dimen/margin_twnety"
    android:padding="@dimen/activity_horizontal_margin"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_background_white">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_ten"
        android:paddingBottom="@dimen/padding_ten"
        android:gravity="center"
        android:textSize="@dimen/frag_profile_text_lebel"
        android:textColor="@color/black"
        android:text="@string/app_name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/padding_ten"
        android:textColor="@color/black"
        android:textSize="@dimen/textsizename"
        android:text="@string/title_saved_msg"/>



    <TextView
        android:id="@+id/txtAmendOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_ten"
        android:paddingBottom="@dimen/padding_ten"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:text="@string/txt_amend_saved_order"
        android:textSize="@dimen/btn_text_size"/>



    <TextView
        android:id="@+id/txtDeleteOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_ten"
        android:paddingBottom="@dimen/padding_ten"
        android:gravity="center"
        android:textColor="@color/red_bright"
        android:text="@string/txt_delete_saved_order"
        android:textSize="@dimen/btn_text_size"/>


    <Button
        android:layout_margin="10dp"
        android:id="@+id/btnCancel"
        android:textSize="@dimen/loginTextSize"
        android:textColor="@color/colorPrimary"
        android:text="@string/cancel"
        android:background="@drawable/rounded_button"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle"/>







</LinearLayout>