<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/margin_five"
    android:paddingLeft="@dimen/margin_five"
    android:paddingRight="@dimen/margin_five">

    <TextView
        android:id="@+id/txtNoData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/txt_no_data"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/llOption"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroud_myCart_list"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/margin_ten"
            android:paddingLeft="@dimen/margin_five"
            android:paddingRight="@dimen/margin_five"
            android:paddingTop="@dimen/margin_ten"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="3.4"
                android:text="@string/txt_description" />

            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2.2"
                android:paddingRight="10dp"
                android:gravity="right|center"
                android:text="@string/txt_price"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.4"
                android:gravity="center"
                android:layout_marginRight="2dp"
                android:text="@string/txt_uom" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.5"
                android:gravity="center"
                android:text="@string/txt_qty" />


            <TextView
                android:id="@+id/header_select"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.5"
                android:gravity="center"
                android:text="@string/txt_select"
                android:visibility="visible" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".60"
            android:orientation="vertical">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <Button
            android:textColor="@color/colorPrimary"
            android:background="@drawable/rounded_button"
            android:id="@+id/btnReorder"
            android:textSize="@dimen/loginTextSize"
            android:text="@string/reorder"
            android:layout_gravity ="center_horizontal"
            android:layout_marginTop="@dimen/margin_five"
            android:layout_marginBottom="@dimen/margin_five"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>


</RelativeLayout>