<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:minWidth="400dip"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/terms"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_terms"
            android:gravity="right"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/zero" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/days_overdue"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_days_overdue"
            android:gravity="right"

            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/zero" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/total_owing"
            android:textStyle="bold" />

        <TextView
            android:gravity="right"

            android:id="@+id/txt_total_owing"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/zero" />
    </LinearLayout>

</LinearLayout>