<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight=".06"
        android:weightSum="10"
        android:background="@color/backgroud_myCart_list"
        android:padding="@dimen/margin_ten">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/heading_delivery_date"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/txt_number"
           />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/heading_delivery_status"
            android:gravity="center"
             />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".94">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListCheckDelivery"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    </LinearLayout>


</LinearLayout>