<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/rounded_background_white"
    android:paddingTop="@dimen/margin_twnety"
    android:paddingBottom="@dimen/margin_twnety"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="@dimen/padding_ten"
        android:paddingBottom="@dimen/padding_ten"
        android:gravity="center"
        android:textSize="@dimen/frag_profile_text_lebel"
        android:textColor="@color/black"
        android:text="@string/request_for_invoices_title"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutEmail"
        android:textColorHint="@color/text_color_register_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_email_id"
            android:padding="@dimen/activity_horizontal_margin"
            android:id="@+id/etEmailId"
            android:singleLine="true"
            android:textColor="@color/text_color_grey"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutFromDate"
        android:textColorHint="@color/text_color_register_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_from"
            android:padding="@dimen/activity_horizontal_margin"
            android:id="@+id/etFrom"
            android:clickable="true"
            android:focusable="false"
            android:editable="false"
            android:textColor="@color/text_color_grey"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutToDate"
        android:textColorHint="@color/text_color_register_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_to"
            android:padding="@dimen/activity_horizontal_margin"
            android:id="@+id/etTo"
            android:focusable="false"
            android:clickable="true"
            android:editable="false"
            android:textColor="@color/text_color_grey"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin">


        <Button
            android:id="@+id/btnCancel"
            android:imeOptions="actionDone"
            android:layout_weight=".5"
            android:background="@drawable/ripple_button_effect"
            android:text="@string/btn_cancel"
            android:textSize="@dimen/loginTextSize"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_ten"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/btnGetInvoices"
            android:imeOptions="actionDone"
            android:layout_weight=".5"
            android:background="@drawable/ripple_button_effect"
            android:text="@string/btn_get_invoices"
            android:textSize="@dimen/loginTextSize"

            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>


</LinearLayout>